--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "screenity",
+  "name": "democraft",
   "version": "3.0.0",
   "description": "The free and privacy-friendly screen recorder with no limits",
   "scripts": {
