--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,10 +13,10 @@
   "icons": {
     "128": "assets/img/icon-128.png"
   },
-  "host_permissions": ["<all_urls>"],
+  "host_permissions": ["<all_urls>","http://localhost:3000/*"],
   "content_scripts": [
     {
-      "matches": ["<all_urls>"],
+      "matches": ["<all_urls>","http://localhost:3000/*"],
       "js": ["contentScript.bundle.js"],
       "css": ["assets/fonts/fonts.css"]
     }
