--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,7 +3,7 @@
   "name": "__MSG_extName__",
   "description": "__MSG_extDesc__",
   "default_locale": "en",
-  "version": "3.1.13",
+  "version": "0.1",
   "background": {
     "service_worker": "background.bundle.js"
   },
@@ -13,10 +13,10 @@
   "icons": {
     "128": "assets/img/icon-128.png"
   },
-  "host_permissions": ["<all_urls>","http://localhost:3000/*"],
+  "host_permissions": ["<all_urls>","http://localhost:3000/*","https://devapp.demokraft.ai/*"],
   "content_scripts": [
     {
-      "matches": ["<all_urls>","http://localhost:3000/*"],
+      "matches": ["<all_urls>","http://localhost:3000/*","https://devapp.demokraft.ai/*"],
       "js": ["contentScript.bundle.js"],
       "css": ["assets/fonts/fonts.css"]
     }
