--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "dotenv": "^17.0.1",
     "fabric": "^5.3.0",
     "fix-webm-duration": "^1.0.5",
+    "gif.js": "^0.2.0",
     "jszip": "^3.10.1",
     "localforage": "^1.10.0",
+    "mediabunny": "^1.24.4",
     "patch-package": "^8.0.0",
     "plyr": "3.7.8",
     "plyr-react": "^5.3.0",
