--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,7 +3,7 @@
   "name": "__MSG_extName__",
   "description": "__MSG_extDesc__",
   "default_locale": "en",
-  "version": "4.0.5",
+  "version": "4.1.0",
   "background": {
     "service_worker": "background.bundle.js"
   },
@@ -41,7 +41,8 @@
         "region.html",
         "waveform.html",
         "playground.html",
-        "editorfallback.html",
+        "editorwebcodecs.html",
+        "editorviewer.html",
         "download.html",
         "*"
       ],
