feat: Initial TypeScript migration setup
- Created feature/typescript-migration branch
- Updated tsconfig.json for gradual migration (allowJs: true)
- Added Chrome API type definitions
- Created global type definitions for assets
- Created messaging type definitions
- Migrated utility files to TypeScript:
  - base64ToUint8Array
  - blobToBase64
  - featureDetection
  - waitForContentScript
  - browserHelpers
- Migrated messageRouter to TypeScript
- Installed @types/chrome and @types/node
- Created TYPESCRIPT_MIGRATION.md tracking document

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,35 +1,43 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ES2020",
     "lib": [
       "dom",
       "dom.iterable",
       "esnext"
     ],
-    "allowJs": false,
+    "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
+    "strict": false,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "noEmit": false,
+    "noEmit": true,
     "checkJs": false,
     "types": [
-      "node"
+      "node",
+      "chrome"
     ],
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "incremental": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
   "include": [
-    "src"
+    "src/**/*",
+    "utils/**/*"
   ],
   "exclude": [
     "build",
-    "node_modules"
+    "node_modules",
+    "**/*.test.ts",
+    "**/*.test.tsx"
   ]
 }
