--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,7 +3,7 @@
   "name": "__MSG_extName__",
   "description": "__MSG_extDesc__",
   "default_locale": "en",
-  "version": "4.2.2",
+  "version": "4.2.3",
   "background": {
     "service_worker": "background.bundle.js"
   },
@@ -101,7 +101,7 @@
     "managed_schema": "schema.json"
   },
   "externally_connectable": {
-    "matches": ["https://app.screenity.io/*", "http://localhost:3000/*"]
+    "matches": ["https://app.screenity.io/*"]
   },
   "optional_permissions": [
     "offscreen",
