--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "axios": "^1.6.2",
     "concurrently": "^8.2.0",
     "dotenv": "^17.0.1",
+    "driver.js": "^1.3.6",
     "fabric": "^5.3.0",
     "fix-webm-duration": "^1.0.5",
     "gif.js": "^0.2.0",
